Upgrade Java to 19, gradle and dependencies (#124)
* Update gradle

* Upgrade to Java 19, gradle and dependencies

* Update GitHub CI